# preciodelaluz-ha

./: .envrc  .gitignore  README.md  flake.nix  packages.nix  pyproject.toml
.github/workflows/: ci.yaml
cli/: __main__.py
custom_components/preciodelaluz/: api.py  manifest.json  sensor.py
nix/: default.nix  formatter.nix  shell.nix
tests/: test_api.py  test_sensor.py
